# nonos-ecosystem

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/nonos-anyone/: Cargo.toml  README.md
crates/nonos-anyone/src/: circuit.rs  client.rs  config.rs  control.rs  installer.rs  lib.rs  proxy.rs
crates/nonos-browser/: Cargo.toml  README.md
crates/nonos-browser/src/: browser.rs  lib.rs  main.rs  security.rs  tabs.rs  ui.rs
crates/nonos-crypto/: Cargo.toml  README.md  blake3_ops.rs  ed25519_ops.rs  mnemonic.rs  stealth.rs  zk_proofs.rs
crates/nonos-crypto/src/: blake3_ops.rs  ed25519_ops.rs  encryption.rs  lib.rs  mnemonic.rs  poseidon.rs  poseidon_canonical.rs  secp256k1_ops.rs  stealth.rs  wallet_encryption.rs  zk_proofs.rs
crates/nonos-daemon/: CONTRIBUTING.md  Cargo.toml  README.md
crates/nonos-daemon/docs/: ARCHITECTURE-NETWORK.md  NODE-OPERATOR.md  STORAGE.md
crates/nonos-daemon/src/: config.rs  dashboard.html  geo.rs  http_client.rs  lib.rs  main.rs  metrics.rs  node.rs  rewards.rs  storage.rs  supervisor.rs  tokenomics.rs
crates/nonos-daemon/src/api/: blockchain_handlers.rs  core_handlers.rs  handlers.rs  middleware.rs  mod.rs  node_handlers.rs  privacy_handlers.rs  responses.rs  rewards_handlers.rs  server.rs  staking_handlers.rs  tests.rs  work_handlers.rs
crates/nonos-daemon/src/api/node_handlers/: handlers.rs  mod.rs  types.rs
crates/nonos-daemon/src/cli/: checks.rs  commands.rs  config_cmd.rs  dashboard.rs  identity.rs  info.rs  init.rs  mixer.rs  mod.rs  peers.rs  rewards.rs  run.rs  stake.rs  systemd.rs  utils.rs
crates/nonos-daemon/src/config/: anyone.rs  api.rs  constants.rs  logging.rs  mod.rs  network.rs  node.rs  rate_limit.rs  rewards.rs  security.rs  services.rs  types.rs
crates/nonos-daemon/src/contracts/: auto_claim.rs  bindings.rs  client.rs  config.rs  mod.rs  rpc.rs  tests.rs
crates/nonos-daemon/src/metrics/: collector.rs  mod.rs  prometheus.rs  tests.rs  timer.rs  types.rs  work_state.rs
crates/nonos-daemon/src/p2p/: behaviour.rs  messages.rs  mod.rs  network.rs  peer_store.rs  swarm.rs  tests.rs  types.rs
crates/nonos-daemon/src/p2p/network/: mod.rs
crates/nonos-daemon/src/p2p/network/config/: constants.rs  get_bootstrap_nodes.rs  get_bootstrap_nodes_for_mode.rs  mod.rs  network_config.rs
crates/nonos-daemon/src/p2p/network/core/: accessors.rs  banning.rs  bootstrap.rs  connections.rs  constructors.rs  events.rs  lifecycle.rs  messaging.rs  mod.rs  network.rs  peer_tracking.rs  rate_limiting.rs  stats.rs  subscriptions.rs  tests.rs
crates/nonos-daemon/src/p2p/network/helpers/: extract_peer_id.rs  humanize_duration.rs  mod.rs
crates/nonos-daemon/src/p2p/peer_store/: entry.rs  mod.rs  store.rs  types.rs
crates/nonos-daemon/src/p2p/types/: backoff.rs  ban.rs  circuit.rs  commands.rs  connection.rs  mod.rs  peer_info.rs  rate_limit.rs  stats.rs  violations.rs
crates/nonos-daemon/src/privacy/: advanced.rs  cache_mixing.rs  cookie_vault.rs  credentials.rs  fingerprint.rs  manager.rs  mixnet.rs  mod.rs  oracle.rs  pir.rs  stealth.rs  stealth_sessions.rs  tests.rs  tracking_blocker.rs  zk_credentials.rs  zk_identity.rs  zk_sessions.rs
crates/nonos-daemon/src/privacy/cookie_vault/: gf256.rs  mod.rs  types.rs  vault.rs
crates/nonos-daemon/src/privacy/credentials/: helpers.rs  manager.rs  mod.rs  types.rs
crates/nonos-daemon/src/privacy/identity/: mod.rs  nullifier.rs  registry.rs  types.rs
crates/nonos-daemon/src/privacy/mixer/: mod.rs  note.rs  pool.rs  types.rs
crates/nonos-daemon/src/privacy/zk_credentials/: circuit.rs  hash.rs  merkle.rs  mod.rs  system.rs  types.rs
crates/nonos-daemon/src/services/: blockchain.rs  bootstrap.rs  cache.rs  health_beacon.rs  manager.rs  mod.rs  quality_oracle.rs  tests.rs
crates/nonos-daemon/src/storage/: config.rs  epochs.rs  identity.rs  metrics.rs  mod.rs  operations.rs  peers.rs  types.rs
crates/nonos-daemon/src/supervisor/: cancellation.rs  core.rs  mod.rs  stats.rs  types.rs
crates/nonos-daemon/tests/: test_results.txt
crates/nonos-dash/: Cargo.toml  README.md
crates/nonos-dash/src/: api.rs  app.rs  data.rs  globe.rs  main.rs  theme.rs
crates/nonos-dash/src/ui/: help.rs  helpers.rs  identities.rs  logs.rs  mod.rs  network.rs  overview.rs  settings.rs  tabs.rs
crates/nonos-types/: Cargo.toml  README.md
crates/nonos-types/src/: address.rs  browser.rs  circuit.rs  constants.rs  crypto.rs  epoch.rs  error.rs  lib.rs  node.rs  wallet.rs
crates/nonos-wallet/: Cargo.toml  README.md
crates/nonos-wallet/src/: account.rs  lib.rs  storage.rs  transaction.rs  wallet.rs
docs/: architecture.md  release-beta.md  security-invariants.md  threat-model.md
hardening/: README.md  nonos_hardening.sh
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.d.ts  app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: blockchain.rs  browser.rs  helpers.rs  lp_staking.rs  main.rs  network.rs  node.rs  privacy.rs  proxy.rs  staking.rs  state.rs  types.rs  wallet.rs  wallet_storage.rs  work_metrics.rs
ui/src-tauri/src/proxy/: mod.rs  rewrite.rs  server.rs  socks.rs
ui/src-tauri/src/wallet/: commands.rs  mod.rs  state.rs
ui/src/lib/components/: Sidebar.svelte  TopBar.svelte
ui/src/lib/staking/: LPStaking.svelte  RewardsPanel.svelte  WorkMetricsPanel.svelte  index.ts  types.ts
ui/src/lib/stores/: browser.ts
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/network/: +page.svelte
ui/src/routes/node/: +page.svelte
ui/src/routes/privacy/: +page.svelte
ui/src/routes/settings/: +page.svelte
ui/src/routes/staking/: +page.svelte
ui/src/routes/wallet/: +page.svelte
