[workspace]
resolver = "2"
members = [
    "crates/nonos-types",
    "crates/nonos-crypto",
    "crates/nonos-wallet",
    "crates/nonos-anyone",
    "crates/nonos-daemon",
    "crates/nonos-dash",
    "crates/nonos-browser",
    "ui/src-tauri",
]

[workspace.package]
version = "1.0.3"
edition = "2021"
authors = ["NON-OS <team@nonos.systems>"]
license = "AGPL-3.0"
repository = "https://github.com/NON-OS/nonos"
homepage = "https://nonos.systems"
rust-version = "1.75.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Cryptography - Production Grade
blake3 = "1.5"
secp256k1 = { version = "0.29", features = ["rand", "recovery", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

# BIP39/BIP32
bip39 = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Networking - P2P
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "identify", "ping", "kad", "gossipsub", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = "0.21"

# Ethereum/EVM - Production
ethers = { version = "2.0", features = ["rustls", "ws"] }
alloy-primitives = "0.6"

# Database - Local Storage
sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"
criterion = "0.5"

# ZK Proofs - Production Grade (arkworks)
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }
base64 = "0.21"

# Internal crates
nonos-types = { path = "crates/nonos-types" }
nonos-crypto = { path = "crates/nonos-crypto" }
nonos-wallet = { path = "crates/nonos-wallet" }
nonos-anyone = { path = "crates/nonos-anyone" }
nonos-daemon = { path = "crates/nonos-daemon" }
nonos-dash = { path = "crates/nonos-dash" }

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-debug]
inherits = "release"
debug = true
strip = false
