[package]
name = "nonos-crypto"
description = "NONOS - Production cryptographic primitives (BLAKE3, secp256k1, Poseidon)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "zk-keygen"
path = "src/bin/zk_keygen.rs"

[dependencies]
nonos-types = { workspace = true }
blake3 = { workspace = true }
secp256k1 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = "0.10"
argon2 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
bip39 = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

# ZK Proofs - arkworks
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-snark = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
