[package]
name = "nonos-daemon"
description = "NONOS Daemon - First release || Decentralized node powering the NONOS ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "nonos"
path = "src/main.rs"

[dependencies]
# Workspace crates
nonos-types = { workspace = true }
nonos-crypto = { workspace = true }
nonos-wallet = { workspace = true }
nonos-anyone = { workspace = true }

# P2P networking
libp2p = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full", "rt-multi-thread", "sync", "time", "signal", "parking_lot"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
toml = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# CLI
clap = { workspace = true }

# Blockchain
ethers = { workspace = true }

# Storage
sled = { workspace = true }

# Time
chrono = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Random
rand = { workspace = true }

# Crypto
blake3 = { workspace = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"

# ZK Proofs (arkworks - Groth16 on BN254)
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["r1cs", "sponge"] }

# Directories
dirs = "5.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTTP server (production-grade)
axum = { version = "0.7", features = ["tokio", "json", "matched-path"] }
tower = { version = "0.4", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Encoding
hex = "0.4"
base64 = "0.22"

# QR codes
qrcode = "0.14"

# Backoff and retry
backoff = { version = "0.4", features = ["tokio"] }

# Rate limiting
governor = "0.6"

# System info
sysinfo = "0.30"

# Encryption (libsodium bindings)
sodiumoxide = { version = "0.2", optional = true }

# Parking lot for faster mutexes
parking_lot = "0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
encrypted-storage = ["sodiumoxide"]
