[package]
name = "nonos-dash"
description = "NONOS Dashboard for monitoring nodes and ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "nonos-dash"
path = "src/main.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dirs = "5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = "0.30"
